review-section added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
                 rel="stylesheet">
 
         <!-- common-stylesheet -->
@@ -29,12 +29,12 @@
                         </nav>
 
                         <!-- banner-section -->
-                         <div class="banner">
+                        <div class="banner">
                                 <div>
                                         <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
                                         <a href="#" class="btn-primary">Stay Focused</a>
                                 </div>
-                         </div>
+                        </div>
                 </div>
         </header>
 
@@ -47,7 +47,8 @@
                                 <div class="action-section">
                                         <div class="action-content">
                                                 <h2 class="section-title">See It in Action</h2>
-                                                <p class="section-detail">Explore the live preview and imagine your brand in this bold new look.</p>
+                                                <p class="section-detail">Explore the live preview and imagine your <br>
+                                                        brand in this bold new look.</p>
                                                 <a href="#" class="btn-primary">Launch Live Preview</a>
                                         </div>
                                         <div class="action-img">
@@ -56,6 +57,44 @@
                                 </div>
                         </div>
                 </section>
+
+                <!-- user-setion -->
+                <section class="user pt-116">
+                        <div class="container">
+                                <div class="user-section">
+                                        <h3 class="section-title">Joined Thousands of Productive Users</h3>
+                                        <div class="user-container">
+                                                <div class="user-item">
+                                                        <h4 class="user-heading">50K</h4>
+                                                        <p class="user-detail">Active Users</p>
+                                                </div>
+                                                <div class="user-item">
+                                                        <h4 class="user-heading">2M+</h4>
+                                                        <p class="user-detail">Focus Sessions</p>
+                                                </div>
+                                                <div class="user-item">
+                                                        <h4 class="user-heading">95%</h4>
+                                                        <p class="user-detail">Satisfaction Rate</p>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                </section>
+
+                <!-- review-section -->
+                 <section class="review pt-116">
+                        <div class="container">
+                                <div class="review-section">
+                                        <h2 class="section-title">What our users say</h2>
+
+                                        <div class="review-container">
+                                                <div class="review-item">
+                                                      
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                 </section>
         </main>
 </body>
 
