--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
                 rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+                integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+                crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <!-- common-stylesheet -->
         <link rel="stylesheet" href="style.css">
@@ -82,19 +85,153 @@
                 </section>
 
                 <!-- review-section -->
-                 <section class="review pt-116">
+                <section class="review pt-116">
                         <div class="container">
                                 <div class="review-section">
                                         <h2 class="section-title">What our users say</h2>
 
                                         <div class="review-container">
                                                 <div class="review-item">
-                                                      
+                                                        <ul class="review-stars">
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                        </ul>
+                                                        <div class="review-content">
+                                                                <h5 class="review-heading">Loved by Designers</h5>
+                                                                <p>This template instantly leveled up our <br>
+                                                                        presence.” –
+                                                                        Studio Vertex</p>
+                                                        </div>
+                                                        <div class="review-author">
+                                                                <div class="author-img">
+                                                                        <img src="./Assets/avatar.png" alt="author-img">
+                                                                </div>
+                                                                <div class="author-content">
+                                                                        <h6>Sajjad Hossain</h6>
+                                                                        <p>Date</p>
+                                                                </div>
+                                                        </div>
+                                                </div>
+                                                <div class="review-item">
+                                                        <ul class="review-stars">
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                        </ul>
+                                                        <div class="review-content">
+                                                                <h5 class="review-heading">Loved by Designers</h5>
+                                                                <p>This template instantly leveled up our <br>
+                                                                        presence.” –
+                                                                        Studio Vertex</p>
+                                                        </div>
+                                                        <div class="review-author">
+                                                                <div class="author-img">
+                                                                        <img src="./Assets/avatar.png" alt="author-img">
+                                                                </div>
+                                                                <div class="author-content">
+                                                                        <h6>Sajjad Hossain</h6>
+                                                                        <p>Date</p>
+                                                                </div>
+                                                        </div>
+                                                </div>
+                                                <div class="review-item">
+                                                        <ul class="review-stars">
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                                <li class="star-item">
+                                                                        <img src="./Assets/icon-star.png" alt="img">
+                                                                </li>
+                                                        </ul>
+                                                        <div class="review-content">
+                                                                <h5 class="review-heading">Loved by Designers</h5>
+                                                                <p>This template instantly leveled up our <br>
+                                                                        presence.” –
+                                                                        Studio Vertex</p>
+                                                        </div>
+                                                        <div class="review-author">
+                                                                <div class="author-img">
+                                                                        <img src="./Assets/avatar.png" alt="author-img">
+                                                                </div>
+                                                                <div class="author-content">
+                                                                        <h6>Sajjad Hossain</h6>
+                                                                        <p>Date</p>
+                                                                </div>
+                                                        </div>
                                                 </div>
                                         </div>
                                 </div>
                         </div>
-                 </section>
+                </section>
+
+                <!-- template-section -->
+                <section class="template pt-116">
+                        <div class="container">
+                                <div class="template-section">
+                                        <div class="section-head">
+                                                <h2 class="section-title">Ready to focus better</h2>
+                                                <p class="section-detail">This template instantly leveled up our
+                                                        presence.” – Studio Vertex</p>
+                                                <a href="#" class="btn-primary">Ger Started Free</a>
+                                        </div>
+                                        <div class="template-img">
+                                                <img src="./Assets/wc-big.png" alt="img">
+                                        </div>
+                                </div>
+                        </div>
+                </section>
+
+                <!-- newsletter-section -->
+                <section class="newsletter pt-116">
+                        <div class="container">
+                                <div class="newsletter-section">
+                                        <div class="newsletter-content">
+                                                <h2 class="section-title">Let’s Get in Touch</h2>
+                                        </div>
+                                        <div class="newsletter-form">
+                                                <form action="">
+                                                        <input type="email" placeholder="Enter your email address">
+                                                        <button type="submit" class="btn-primary">Subscribe</button>
+                                                </form>
+                                        </div>
+                                </div>
+
+                        </div>
+                </section>
         </main>
 </body>
 
