--- a/index.html
+++ b/index.html
@@ -220,12 +220,27 @@
                         <div class="container">
                                 <div class="newsletter-section">
                                         <div class="newsletter-content">
-                                                <h2 class="section-title">Let’s Get in Touch</h2>
+                                                <h2 class="section-title">Let’s Get in <br> Touch</h2>
                                         </div>
                                         <div class="newsletter-form">
                                                 <form action="">
-                                                        <input type="email" placeholder="Enter your email address">
-                                                        <button type="submit" class="btn-primary">Subscribe</button>
+                                                        <div class="form-item">
+                                                                <label for="emil" class="form-title">Email</label>
+                                                                <input type="email" id="email" class="form-input"
+                                                                        placeholder="example@email.com">
+                                                        </div>
+                                                        <div class="form-item">
+                                                                <label for="name" class="form-title">Name</label>
+                                                                <input type="text" id="name" class="form-input"
+                                                                        placeholder="Full name">
+                                                        </div>
+                                                        <div class="form-item">
+                                                                <label for="massage" class="form-title">Massage</label>
+                                                                <textarea name="massage" id="massage" rows="5"
+                                                                        class="form-input"
+                                                                        placeholder="write your message...."></textarea>
+                                                        </div>
+                                                        <button class="btn-primary">Get in Touch</button>
                                                 </form>
                                         </div>
                                 </div>
@@ -233,6 +248,29 @@
                         </div>
                 </section>
         </main>
+
+        <div class="footer">
+                <div class="container">
+                        <div class="footer-section">
+                                <div class="footer-content">
+                                        <div class="footer-logo">
+                                                <img src="./Assets/footer-logo.png" alt="img">
+                                        </div>
+                                        <p class="footer-detail">Ready to elevate your online presence? Contact us today
+                                                to discuss <br> your project and discover how we can bring your vision
+                                                to life.</p>
+
+                                        <ul class="footer-nav">
+                                                <li><a href="#" class="footer-link">Home</a></li>
+                                                <li><a href="#" class="footer-link">About</a></li>
+                                                <li><a href="#" class="footer-link">How it Works</a></li>
+                                                <li><a href="#" class="footer-link">Services</a></li>
+                                        </ul>
+                                </div>
+
+                        </div>
+                </div>
+        </div>
 </body>
 
 </html>
