--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
                                                 <li><a href="#" class="footer-link">About</a></li>
                                                 <li><a href="#" class="footer-link">How it Works</a></li>
                                                 <li><a href="#" class="footer-link">Services</a></li>
+                                                <li><a href="#" class="footer-link">Contact</a></li>
                                         </ul>
                                 </div>
 
