--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </section>
 
                 <!-- newsletter-section -->
-                <section class="newsletter pt-116">
+                <section class="newsletter py-116">
                         <div class="container">
                                 <div class="newsletter-section">
                                         <div class="newsletter-content">
